--- a/app/views/okogoto_images/new.html.erb
+++ b/app/views/okogoto_images/new.html.erb
@@ -2,28 +2,29 @@
   <div class="mx-auto max-w-screen-2xl px-4 md:px-8 flex justify-center">
     <div class="card w-96 bg-base-100 shadow-xl mb-10">
       <div class="card-body">
-        <h1 class="card-title justify-center"><%= t('.title') %></h1>
+        <h1 class="card-title justify-center text-secondary"><%= t('.title') %></h1>
         <%= form_with url: okogoto_images_path, local: true, class: 'flex-col' do |f| %>
           <div class="form-control mb-4">
-            <%= f.label t('.okogoto'), class: 'label' %>
-            <%= f.text_area :okogoto, class: 'textarea textarea-bordered', placeholder: '70文字以内で入力してください（ 70文字以上入力されません ）', maxlength: '70' %>
+            <%= f.label t('.okogoto'), class: 'label text-secondary' %>
+            <%= f.text_area :okogoto, class: 'textarea textarea-primary bg-primary text-white placeholder-white', placeholder: '70文字以内で入力してください（ 70文字以上入力されません ）', maxlength: '70' %>
           </div>
           <div class="form-control space-x-2 space-y-2">
-            <%= f.label t('.image') %>
+            <%= f.label t('.image'), class: 'text-secondary' %>
             <label class="flex justify-start cursor-pointer">
-              <%= f.radio_button :image, 'kakugen', class: 'radio checked:bg-red-500 radio-sm', checked: true %>
-              <%= f.label :image, t('.kakugen'), value: 'kakugen', class: 'label-text font-mono ml-2 cursor-pointer' %>
+              <%= f.radio_button :image, 'kakugen', class: 'radio checked:bg-primary radio-sm', checked: true %>
+              <%= f.label :image, t('.kakugen'), value: 'kakugen', class: 'label-text text-primary font-mono ml-2 cursor-pointer' %>
             </label>
             <label class="flex justify-start cursor-pointer">
-              <%= f.radio_button :image, 'kogoto', class: 'radio checked:bg-red-500 radio-sm' %>
-              <%= f.label :image, t('.kogoto'), value: 'kogoto', class: 'label-text font-mono ml-2 cursor-pointer' %>
+              <%= f.radio_button :image, 'kogoto', class: 'radio checked:bg-primary radio-sm' %>
+              <%= f.label :image, t('.kogoto'), value: 'kogoto', class: 'label-text text-primary font-mono ml-2 cursor-pointer' %>
             </label>
             <label class="flex justify-start cursor-pointer ">
-              <%= f.radio_button :image, 'friends', class: 'radio checked:bg-red-500 radio-sm' %>
-              <%= f.label :image, t('.friends'), value: 'friends', class: 'label-text font-mono ml-2 cursor-pointer' %>
+              <%= f.radio_button :image, 'friends', class: 'radio checked:bg-primary radio-sm' %>
+              <%= f.label :image, t('.friends'), value: 'friends', class: 'label-text text-primary font-mono ml-2 cursor-pointer' %>
             </label>
           </div>
-          <div class="carousel carousel-center rounded-box mt-4">
+          <p class="mt-6 text-gray-500"><i class="fa-regular fa-hand-point-down mr-1"></i>スワイプして画像を確認</p>
+          <div class="carousel carousel-center rounded-box mt-1">
             <div class="carousel-item">
               <%= image_tag 'okogoto_kakugen.png', size: '320x200' %>
             </div> 
@@ -35,7 +36,7 @@
             </div> 
           </div>
           <div class="card-actions justify-center mt-3">
-            <%= f.submit t('.submit'), class: 'btn btn-primary rounded-full' %>
+            <%= f.submit t('.submit'), class: 'btn btn-primary text-white rounded-full' %>
           </div>
         <% end %>
       </div>
