--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,22 +1,22 @@
 <div class="flex justify-center">
   <div class="card w-96 bg-base-100 shadow-xl my-12">
     <div class="card-body">
-      <%= t('.created_image') %>
+      <h2 class="text-secondary"><%= t('.created_image') %></h2>
       <%= image_tag @post.kogoto_image.url %>
       <%= form_with model: @post, local: true, class: 'flex-col' do |f| %>
         <div class="form-control">
-          <%= f.label :comment, class: 'label' %>
-          <%= f.text_area :comment, class: 'textarea textarea-bordered', placeholder: t('.comment') %>
+          <%= f.label :comment, class: 'label text-secondary' %>
+          <%= f.text_area :comment, class: 'textarea textarea-primary textarea-bordered text-white bg-primary placeholder-white', placeholder: t('.comment') %>
         </div>
-        <%= f.label :tag_id, Tag.model_name.human, class: 'label' %>
-        <%= f.collection_select(:tag_id, @tags, :id, :situation, { prompt: t('.tag') }, { class: 'select select-bordered select-sm w-full max-w-xs mb-2' }) %>
+        <%= f.label :tag_id, Tag.model_name.human, class: 'label text-secondary' %>
+        <%= f.collection_select(:tag_id, @tags, :id, :situation, { prompt: t('.tag') }, { class: 'select select-primary text-white bg-primary select-bordered select-sm w-full max-w-xs mb-2' }) %>
         <div class="card-actions justify-center mt-3">
-          <%= f.submit t('defaults.post_create'), class: 'btn btn-primary rounded-full' %>
+          <%= f.submit t('defaults.post_create'), class: 'btn btn-secondary text-white rounded-full' %>
         </div>
       <% end %>
       <div class="flex justify-center">
         <%= button_to t('.delete_post'), post_path(@post),
-                                        class: 'btn btn-outline whitespace-nowrap rounded-full mt-2',
+                                        class: 'btn btn-primary btn-outline whitespace-nowrap rounded-full mt-2',
                                         method: :delete,
                                         data: { turbo_confirm: t('.delete_check') } %>
       </div>
