--- a/app/views/profiles/_my_posts.html.erb
+++ b/app/views/profiles/_my_posts.html.erb
@@ -1,23 +1,23 @@
-<div class="flex justify-center mt-8">
-  <%= link_to post_path(item) do %>
-    <div class="p-4 md:w-1/3">
+<div class="flex justify-center mt-2">
+  <div class="p-4 lg:w-2/5">
+    <%= link_to post_path(item) do %>
       <div class="h-full border-2 border-gray-200 border-opacity-60 rounded-lg overflow-hidden">
-        <%= image_tag item.kogoto_image.url, class: 'lg:h-64 md:h-36 w-full object-cover object-center' %>
+        <%= image_tag item.kogoto_image.url, class: 'lg:h-80 w-full object-cover object-center' %>
         <div class="p-6">
-          <h2 class="tracking-widest text-xs title-font font-medium text-gray-400 mb-1"><%= Post.human_attribute_name('comment') %></h2>
-          <p class="leading-relaxed mb-3"><%= item.comment %></p>
+          <h2 class="tracking-widest text-xs title-font font-medium text-neutral mb-1"><%= Post.human_attribute_name('comment') %></h2>
+          <p class="leading-relaxed text-sm mb-3"><%= item.comment %></p>
           <div class="flex items-center flex-wrap">
             <% if item.tag %>
-              <%= link_to "# #{item.tag.situation}", posts_path( search: { tag_id: item.tag_id }), class: 'link link-hover text-green-500 inline-flex items-center md:mb-2 lg:mb-0' %>
+              <%= link_to "# #{item.tag.situation}", posts_path( search: { tag_id: item.tag_id }), class: 'link link-hover text-accent inline-flex items-center md:mb-2 lg:mb-0' %>
             <% else %>
-            <%= link_to "# どんな時のオコゴト？", posts_path( search: { tag_id: item.tag_id }), class: 'link link-hover text-green-500 inline-flex items-center md:mb-2 lg:mb-0' %>
+            <%= link_to "# どんな時のオコゴト？", posts_path( search: { tag_id: item.tag_id }), class: 'link link-hover text-primary inline-flex items-center md:mb-2 lg:mb-0' %>
             <% end %>
-            <span class="text-gray-400 inline-flex items-end lg:ml-auto md:ml-0 ml-auto leading-none text-sm pr-3 py-1">
+            <span class="text-gray-400 inline-flex items-end lg:ml-auto ml-auto leading-none text-sm pr-3 py-1">
               <i class="fa-regular fa-face-smile mr-1"></i><%= item.likes.size %>
             </span>
           </div>
         </div>
       </div>
-    </div>
-  <% end %>
+    <% end %>
+  </div>
 </div>
