--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,13 +1,18 @@
-<div class="navbar bg-base-200">
+<div class="navbar bg-secondary text-white">
   <div class="flex-1">
-    <%= link_to 'Okogoto', root_path, class: 'btn btn-ghost normal-case text-xl' %>
+    <%= link_to image_tag('Okogoto_logo.png', size: '110'), root_path, class: 'ml-4' %>
   </div>
-  <div class='flex-1 justify-end'>
+  <div class="flex-none">
     <% if logged_in? %>
-      <%= link_to 'みんなのオコゴトを見る', posts_path, class: 'btn btn-square btn-ghost whitespace-nowrap flex-auto' %>
-      <%= link_to 'オコゴト画像を作成する', new_okogoto_image_path, class: 'btn btn-square btn-ghost whitespace-nowrap flex-1' %>
-      <%= link_to 'マイページ', profile_path, class: 'btn btn-square btn-ghost whitespace-nowrap w-24' %>
-      <%= button_to t('defaults.logout'), logout_path, class: 'btn btn-square btn-ghost whitespace-nowrap w-24', method: :delete %>
+      <details class="dropdown dropdown-end mr-2">
+        <summary tabindex="0" class="btn btn-ghost m-1"><i class="fa-solid fa-bars fa-lg"></i></summary>
+        <ul tabindex="0" class="dropdown-content menu p-2 shadow bg-secondary whitespace-nowrap rounded-box w-60 hover:bg-">
+          <li><%= link_to 'みんなのオコゴトを見る', posts_path %></li>
+          <li><%= link_to 'オコゴト画像を作成する', new_okogoto_image_path %></li>
+          <li><%= link_to 'マイページ', profile_path %></li>
+          <li><%= button_to t('defaults.logout'), logout_path, method: :delete %></li>
+        </ul>
+      </details>
     <% else %>
       <%= link_to t('defaults.login'), login_path, class: 'btn btn-square btn-ghost whitespace-nowrap w-24' %>
     <% end %>
