--- a/app/views/top_pages/top.html.erb
+++ b/app/views/top_pages/top.html.erb
@@ -1,11 +1,52 @@
-<div class="hero min-h-screen bg-base-200">
-  <div class="hero-content text-center">
-    <div class="max-w-md">
-      <h1 class="text-5xl font-bold">Hello okogoto!</h1>
-      <p class="py-6">トップページになる予定</p>
-      <%= link_to new_user_path do %>
-        <button class="btn btn-accent btn-outline rounded-full">ユーザー登録ページへ</button>
-      <% end %>
+<section class="bg-base-100">
+  <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
+    <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 mb-10 md:mb-0">
+      <%= image_tag 'okogoto_explanation', size: '720x600' %>
+    </div>
+    <div class="lg:flex-grow md:w-1/2 lg:pl-24 md:pl-16 flex flex-col md:items-start md:text-left items-center text-center">
+      <h1 class="title-font sm:text-2xl text-xl mb-4 font-medium text-primary text-left">Okogotoでは
+        <br class="lg:inline-block">背景やフォントを使って
+        <br class="lg:inline-block">あなたの言葉の雰囲気を変え
+        <br class="lg:inline-block">客観的に見ることをお手伝いします
+      </h1>
+      <div class="collapse bg-info mt-6 rounded-3xl">
+        <input type="checkbox" /> 
+        <div class="collapse-title text-lg font-medium text-primary">
+          <i class="fa-solid fa-play text-primary mx-1"></i>
+          Okogotoへの想い
+        </div>
+        <div class="collapse-content"> 
+          <p class="mx-4 text-gray-500">
+            「小言」と聞くとあまりいい印象を抱かない人が多いかもしれませんが、私は必ず無くすべきものだとは思っていません。</br>
+            </br>
+            きっと小言は後悔や経験から生まれるその人にとっての格言のようなもので、同じ経験を持っていない人には伝わりにくい言葉なんだと思います。</br>
+            </br>
+            大切なのは小言を言わないことではなく、自分にとっては ”格言” でも</br> 
+            自分と同じ経験をしていない人にとって、その言葉はただの ”小言” かもしれない・・・と想像することにあるんじゃないかと考えました。</br>
+            </br>
+            Okogotoは、他人の視点で言葉を見るお手伝いができたらいいなと思い作成しました。</br>
+            </br>
+            私の長い長いオコゴトにお付き合いいただきありがとうございました！</br>
+            ぜひあなたのオコゴトを教えください！</br>
+          </p>
+        </div>
+      </div>
+      <div class="flex justify-center mt-8 mb-16">
+        <%= link_to t('.to_posts_index'), posts_path, class: 'btn btn-secondary rounded-full text-white' %>
+      </div>
+      <h1 class="title-font sm:text-2xl text-xl my-4 font-medium text-neutral">オコゴトの投稿方法</h1>
+      <div class="chat chat-start">
+        <div class="chat-bubble chat-bubble-primary whitespace-nowrap w-80 text-white">1. オコゴトを入力</div>
+      </div>
+      <div class="chat chat-start">
+        <div class="chat-bubble chat-bubble-primary whitespace-nowrap w-80 text-white">2. 見てみたい雰囲気の画像を選択</div>
+      </div>
+      <div class="chat chat-start">
+        <div class="chat-bubble chat-bubble-primary whitespace-nowrap w-80 text-white">3. 画像に説明をつけて投稿</div>
+      </div>
+      <div class="flex justify-center mt-8">
+        <%= link_to t('.to_create_user'), new_user_path, class: 'btn btn-secondary rounded-full text-white' %>
+      </div>
     </div>
   </div>
-</div>
+</section>
