--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
     <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
     <script src="https://kit.fontawesome.com/67515df7cb.js" crossorigin="anonymous"></script>
     <%= display_meta_tags(default_meta_tags) %>
+    <%= favicon_link_tag 'favicon.ico' %>
   </head>
 
   <body>
