--- a/app/views/top_pages/top.html.erb
+++ b/app/views/top_pages/top.html.erb
@@ -1,7 +1,7 @@
 <section class="bg-base-100">
   <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
     <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 mb-10 md:mb-0">
-      <%= image_tag 'okogoto_explanation', size: '720x600' %>
+      <%= image_tag 'okogoto_explanation.png', size: '720x600' %>
     </div>
     <div class="lg:flex-grow md:w-1/2 lg:pl-24 md:pl-16 flex flex-col md:items-start md:text-left items-center text-center">
       <h1 class="title-font sm:text-2xl text-xl mb-4 font-medium text-primary text-left">Okogotoでは
