Fix:レイアウトを修正

--- a/app/views/posts/_like_button.html.erb
+++ b/app/views/posts/_like_button.html.erb
@@ -4,6 +4,6 @@
   <% end %>
 <% else %>
   <%= link_to post_likes_path(post), data: { turbo_method: :post } do %>
-    <button class="btn btn-sm btn-outline btn-primary"><i class="fa-regular fa-face-smile mr-1"></i><%= Like.model_name.human %> <%= post.likes.size %></button>
+    <button class="btn btn-sm btn-outline btn-primary hover:bg-primary hover:text-white"><i class="fa-regular fa-face-smile mr-1"></i><%= Like.model_name.human %> <%= post.likes.size %></button>
   <% end %>
 <% end %>
