--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -6,7 +6,7 @@
     <% if logged_in? %>
       <details class="dropdown dropdown-end mr-2">
         <summary tabindex="0" class="btn btn-ghost m-1"><i class="fa-solid fa-bars fa-lg"></i></summary>
-        <ul tabindex="0" class="dropdown-content menu p-2 shadow bg-secondary whitespace-nowrap rounded-box w-60 hover:bg-">
+        <ul tabindex="0" class="dropdown-content menu p-2 shadow bg-secondary text-neutral whitespace-nowrap rounded-box w-60 hover:bg-">
           <li><%= link_to 'みんなのオコゴトを見る', posts_path %></li>
           <li><%= link_to 'オコゴト画像を作成する', new_okogoto_image_path %></li>
           <li><%= link_to 'マイページ', profile_path %></li>
