Fix:ロゴクリック時とログイン後の遷移先を投稿一覧に変更

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,6 +1,6 @@
 <div class="navbar bg-secondary text-white">
   <div class="flex-1">
-    <%= link_to image_tag('Okogoto_logo.png', size: '110'), root_path, class: 'ml-4' %>
+    <%= link_to image_tag('Okogoto_logo.png', size: '110'), posts_path, class: 'ml-4' %>
   </div>
   <div class="flex-none">
     <% if logged_in? %>
