--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -23,11 +23,16 @@
     </figure>
     <div class="text-right text-primary pr-10"><%= l @post.created_at, format: :short %></div>
     <div class="card-body items-center text-center">
-      <h3 class="card-title text-primary text-left"><%= Post.human_attribute_name('comment') %></h3>
-      <p class="text-gray-500"><%= @post.comment %></p>
+      <% if @post.comment.present? %>
+        <h3 class="card-title text-primary text-left"><%= Post.human_attribute_name('comment') %></h3>
+        <p class="text-gray-500"><%= @post.comment %></p>
+      <% end %>
       <% if @post.tag_id.present? %>
         <h3 class="card-title text-primary"><%= Tag.model_name.human %></h3>
         <%= link_to "# #{@post.tag.situation}", posts_path( search: { tag_id: @post.tag_id }), class: 'link link-accent' %>
+      <% else %>
+        <h3 class="card-title text-primary"><%= Tag.model_name.human %></h3>
+        <%= link_to "# オコゴト", posts_path, class: 'link link-accent' %>
       <% end %>
     </div>
     <% if current_user %>
