Fix:タイトルをページごとに設定

--- a/app/views/okogoto_images/new.html.erb
+++ b/app/views/okogoto_images/new.html.erb
@@ -1,3 +1,4 @@
+<% set_meta_tags( title: 'オコゴト画像作成' ) %>
 <div class="bg-white py-6 sm:py-8 lg:py-12">
   <div class="mx-auto max-w-screen-2xl px-4 md:px-8 flex justify-center">
     <div class="card w-96 bg-base-100 shadow-xl mb-10">
