--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,3 +1,4 @@
+<% set_meta_tags( title: 'オコゴト一覧' ) %>
 <section class="bg-base-100 body-font">
   <div class="container px-5 py-12 mx-auto">
     <div class="flex flex-col text-center w-full mb-20">
