--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,4 @@
+<% set_meta_tags( title: 'ユーザー登録' ) %>
 <div class="flex justify-center">
   <div class="card w-96 my-10 bg-base-100 shadow-xl">
     <div class="card-body">
