--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -1,3 +1,4 @@
+<% set_meta_tags( title: 'プロフィール編集' ) %>
 <div class="flex justify-center">
   <div class="card w-96 bg-base-100 shadow-xl my-10">
     <div class="card-body">
