--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-FSVSHJSP19"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-FSVSHJSP19');
+    </script>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -10,6 +19,7 @@
     <script src="https://kit.fontawesome.com/67515df7cb.js" crossorigin="anonymous"></script>
     <%= display_meta_tags(default_meta_tags) %>
     <%= favicon_link_tag 'favicon.ico' %>
+    
   </head>
 
   <body>
