Add:利用規約とプライバシーポリシーを追加

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -7,10 +7,10 @@
       <a href="https://twitter.com/cherry_00023" rel="noopener noreferrer" class="text-gray-600 ml-1" target="_blank">@cherry_00023</a>
     </p>
     <span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start">
-      <%= link_to '利用規約', '#', class: 'link link-hover my-1 text-gray-500' %>
+      <%= link_to '利用規約', page_path('terms_of_service'), class: 'link link-hover my-1 text-gray-500' %>
     </span>
     <span class="inline-flex sm:ml-auto sm:mt-0 mt-2 justify-center sm:justify-start">
-      <%= link_to 'プライバシーポリシー', '#', class: 'link link-hover my-1 text-gray-500' %>
+      <%= link_to 'プライバシーポリシー', page_path('privacy_policy'), class: 'link link-hover my-1 text-gray-500' %>
     </span>
     <span class="inline-flex sm:ml-auto sm:mt-0 mt-2 justify-center sm:justify-start">
       <%= link_to 'お問い合わせ', 'https://twitter.com/cherry_00023', class: 'link link-hover my-1 text-gray-500', target: '_blank' %>
