--- a/app/views/pages/terms_of_service.html.erb
+++ b/app/views/pages/terms_of_service.html.erb
@@ -126,13 +126,13 @@
   </div>
   <div class="mx-auto max-w-full px-4 md:px-8 mt-4">
     <h2 class="mb-4 text-2xl font-bold text-primary lg:text-lg">第12条（権利義務の譲渡の禁止）</h2>
-    <p class="max-w-full text-gray-500 md:text-md">ユーザーは，当社の書面による事前の承諾なく，利用契約上の地位または本規約に基づく権利もしくは義務を第三者に譲渡し，または担保に供することはできません。</p>
+    <p class="max-w-full text-gray-500 md:text-md">ユーザーは，当方の書面による事前の承諾なく，利用契約上の地位または本規約に基づく権利もしくは義務を第三者に譲渡し，または担保に供することはできません。</p>
   </div>
   <div class="mx-auto max-w-full px-4 md:px-8 mt-4">
     <h2 class="mb-4 text-2xl font-bold text-primary lg:text-lg">第13条（準拠法・裁判管轄）</h2>
     <ol class="list-decimal max-w-full text-gray-500 text-md ml-8">
       <li>本規約の解釈にあたっては，日本法を準拠法とします。</li>
-      <li>本サービスに関して紛争が生じた場合には，当社の本店所在地を管轄する裁判所を専属的合意管轄とします。</li>
+      <li>本サービスに関して紛争が生じた場合には，当方の本店所在地を管轄する裁判所を専属的合意管轄とします。</li>
     </ol>
   </div>
 </div>
