Fix:誤字の修正と内容の見直し

--- a/app/views/pages/privacy_policy.html.erb
+++ b/app/views/pages/privacy_policy.html.erb
@@ -2,7 +2,7 @@
 <div class="bg-white py-6 sm:py-8 lg:py-12">
   <div class="mx-auto max-w-full px-4 md:px-8">
     <p class="mb-2 font-semibold text-secondary md:mb-3 text-2xl">プライバシーポリシー</p>
-    <p class="max-w-full text-gray-500 text-md">Okogoto（以下、「当方」といいます。）は、本ウェブアプリ上で提供するサービス（以下、「本サービス」といいます。）におけるお客様の個人情報の取扱いについて、以下のとおりプライバシーポリシープライバシーポリシー（以下「ポリシー」といいます。）を定めます。</p>
+    <p class="max-w-full text-gray-500 text-md">Okogoto（以下、「当方」といいます。）は、本ウェブアプリ上で提供するサービス（以下、「本サービス」といいます。）におけるお客様の個人情報の取扱いについて、以下のとおりプライバシーポリシー（以下「ポリシー」といいます。）を定めます。</p>
   </div>
   <div class="mx-auto max-w-full px-4 md:px-8 mt-4">
     <h2 class="mb-4 text-2xl font-bold text-primary lg:text-lg">お客様から取得する情報</h2>
@@ -14,7 +14,6 @@
       <li class="text-gray-500 md:text-md ml-4">Cookie（クッキー）を用いて生成された識別情報</li>
       <li class="text-gray-500 md:text-md ml-4">OSが生成するID、端末の種類、端末識別子等のお客様が利用するOSや端末に関する情報</li>
       <li class="text-gray-500 md:text-md ml-4">当方ウェブサイトの滞在時間、入力履歴、購買履歴等の当方ウェブサイトにおけるお客様の行動履歴</li>
-      <li class="text-gray-500 md:text-md ml-4">当方アプリの起動時間、入力履歴、購買履歴等の当方アプリの利用履歴</li>
       <li class="text-gray-500 md:text-md ml-4">その他当サービスが定める入力フォームにお客様が入力する情報</li>
     </p>
   </div>
@@ -30,10 +29,6 @@
       <li class="text-gray-500 md:text-md ml-4">当方規約の変更等を通知するため</li>
       <li class="text-gray-500 md:text-md ml-4">以上の他、当方サービスの提供、維持、保護及び改善のため</li>
     </p>
-  </div>
-  <div class="mx-auto max-w-full px-4 md:px-8 mt-4">
-    <h2 class="mb-4 text-2xl font-bold text-primary lg:text-lg">安全管理のために講じた措置</h2>
-    <p class="max-w-full text-gray-500 md:text-md">当方が、お客様から取得した情報に関して安全管理のために講じた措置につきましては、末尾記載のお問い合わせ先にご連絡をいただきましたら、法令の定めに従い個別にご回答させていただきます。</p>
   </div>
   <div class="mx-auto max-w-full px-4 md:px-8 mt-4">
     <h2 class="mb-4 text-2xl font-bold text-primary lg:text-lg">第三者提供</h2>
