--- a/app/views/top_pages/top.html.erb
+++ b/app/views/top_pages/top.html.erb
@@ -1,6 +1,6 @@
 <% set_meta_tags( title: 'Okogotoへようこそ！' ) %>
 <section class="bg-base-100">
-  <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
+  <div class="container mx-auto flex px-5 py-24 flex-col items-center">
     <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6 mb-10 md:mb-0">
       <%= image_tag 'okogoto_explanation.png', size: '720x600' %>
     </div>
@@ -35,7 +35,7 @@
       <div class="flex justify-center mt-8 mb-16">
         <%= link_to t('.to_posts_index'), posts_path, class: 'btn btn-secondary rounded-full text-white' %>
       </div>
-      <h1 class="title-font sm:text-2xl text-xl my-4 font-medium text-neutral">オコゴトの投稿方法</h1>
+      <h1 class="title-font sm:text-2xl text-xl my-4 font-medium text-neutral">オコゴト画像のつくりかた</h1>
       <div class="chat chat-start">
         <div class="chat-bubble chat-bubble-primary whitespace-nowrap w-80 text-white">1. オコゴトを入力</div>
       </div>
@@ -43,7 +43,39 @@
         <div class="chat-bubble chat-bubble-primary whitespace-nowrap w-80 text-white">2. 見てみたい雰囲気の画像を選択</div>
       </div>
       <div class="chat chat-start">
-        <div class="chat-bubble chat-bubble-primary whitespace-nowrap w-80 text-white">3. 画像に説明をつけて投稿</div>
+        <div class="chat-bubble chat-bubble-primary whitespace-nowrap w-80 text-white">3. オコゴト画像に説明を追加</div>
+      </div>
+      <div class="chat chat-start">
+        <div class="chat-bubble chat-bubble-primary whitespace-nowrap w-96 text-white">
+          <i class="fa-regular fa-circle-check mr-1"></i>
+          投稿された画像はダウンロード可能です！
+        </div>
+      </div>
+      </div>
+      <div class="mockup-phone border-secondary mt-6">
+        <div class="camera"></div> 
+        <div class="display">
+          <div class="artboard artboard-demo phone-1">
+            <%= image_tag 'introduction_calendar.png', class: 'object-cover' %>
+          </div>
+        </div>
+      </div>
+      <div class="chat chat-start mt-2 mb-4">
+        <div class="chat-bubble chat-bubble-primary whitespace-nowrap w-64 text-white">
+          スマホver壁紙は</br>
+          7月のカレンダーです
+        </div>
+      </div>
+      <div class="mockup-window border border-secondary w-1/2 mt-4">
+        <div class="flex justify-center border-t border-secondary">
+          <%= image_tag 'desctop_example.png', class: 'object-cover' %>
+        </div>
+      </div>
+      <div class="chat chat-start mt-2 mb-4">
+        <div class="chat-bubble chat-bubble-primary whitespace-nowrap w-64 text-white">
+          ダウンロードした画像は</br>
+          パソコンの壁紙にもできます
+        </div>
       </div>
       <div class="flex justify-center mt-8">
         <%= link_to t('.to_create_user'), new_user_path, class: 'btn btn-secondary rounded-full text-white' %>
